--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+<!doctype html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -7,7 +9,11 @@
 	  {% load bootstrap4 %} 
 	  {% bootstrap_css %}
  
- 
+ <style>
+ body {
+  padding-top: 3.5rem;
+}
+ </style>
   </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -35,12 +41,12 @@
           </ul>
         </div>
       </nav>
-
+  <main role="main">
     <div class="container">
     {% block content %}
     {% endblock %}
     </div>
-
+  </main>
     {% bootstrap_javascript jquery='full' %}
     
 </body>
