--- a/templates/business/business_form.html
+++ b/templates/business/business_form.html
@@ -1,4 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<br/><br/>
+<div class="row">
+<div class="col-md-12">
+    <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">Save</button>
+</form>
+</div>
+</div>
 {% endblock %}
