--- a/templates/business/business_form.html
+++ b/templates/business/business_form.html
@@ -8,6 +8,7 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Save</button>
+    <a href="{% url 'business:list' %}" class="btn btn-secondary">Cancel</a>
 </form>
 </div>
 </div>
