--- a/templates/business/business_list.html
+++ b/templates/business/business_list.html
@@ -4,6 +4,9 @@
 <h1>Business</h1>
 <div class="row">
 <div class="col-md-12">
+
+<a href="{% url 'business:create' %}" class="btn btn-primary">Create</a>
+<br/><br/>
 <table class="table table-bordered">
     <thead>
         <tr>
